firstapp/test-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  namespace: argocd
spec: 
  rules:
    - http:
        paths:           
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port: 
                  number: 80
          # - path: /swagger-ui/index.html
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: service1-service
          #       port: 
          #         number: 8080
